Bug 162837 - konqueror crash on weather.com earthquake map
Summary: konqueror crash on weather.com earthquake map
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-05-29 22:21 UTC by Yuriy Kozlov
Modified: 2008-05-30 19:35 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
backtrace (2.97 KB, text/plain)
2008-05-29 22:23 UTC, Yuriy Kozlov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yuriy Kozlov 2008-05-29 22:21:36 UTC
Version:            (using KDE 4.0.4)
Installed from:    Ubuntu Packages
OS:                Linux

Konqueror crashes on weather.com when you:
1) go to Maps (at the top, under the search bar)
2) go to Health & Safety under select map type
3) select Earthquake Reports in the list next to that
(this can be also be reached at http://www.weather.com/maps/earthquakereports.html )
4) select Alaska Earthquake Report in the list under the map.

Here is the backtrace:

(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
[Thread debugging using libthread_db enabled]
[New Thread 0xb6120720 (LWP 20104)]
[KCrash handler]
#6  0xb7be8661 in QCoreApplication::notifyInternal ()
   from /usr/lib/libQtCore.so.4
#7  0xb3c6808e in QCoreApplication::sendEvent (receiver=0x8dd7810, 
    event=0xbfefd8b8) at /usr/include/qt4/QtCore/qcoreapplication.h:207
#8  0xb3da525c in khtml::RenderWidget::handleEvent (this=0x8b002fc, 
    ev=@0x90dad20)
    at /tmp/buildd/kde4libs-4.0.4/khtml/rendering/render_replaced.cpp:891
#9  0xb3d18fff in DOM::HTMLIFrameElementImpl::defaultEventHandler (
    this=0x8a5ab70, e=0x90dad20)
    at /tmp/buildd/kde4libs-4.0.4/khtml/html/html_baseimpl.cpp:705
#10 0xb3cdc2e4 in DOM::NodeImpl::dispatchGenericEvent (this=0x8a5ab78, 
    evt=0x90dad20)
    at /tmp/buildd/kde4libs-4.0.4/khtml/xml/dom_nodeimpl.cpp:502
#11 0xb3cdac1b in DOM::NodeImpl::dispatchEvent (this=0x8a5ab78, 
    evt=0x90dad20, exceptioncode=@0xbfefdb38, tempEvent=true)
    at /tmp/buildd/kde4libs-4.0.4/khtml/xml/dom_nodeimpl.cpp:429
#12 0xb3c4d90e in KHTMLView::dispatchMouseEvent (this=0x84a1050, eventId=7, 
    targetNode=0x8a5ab78, targetNodeNonShared=0x8a5ab78, 
    cancelable=<value optimized out>, detail=0, _mouse=0xbfefe3cc, 
    setUnder=true, mouseEventType=4, orient=0)
    at /tmp/buildd/kde4libs-4.0.4/khtml/khtmlview.cpp:3630
#13 0xb3c54ded in KHTMLView::mouseMoveEvent (this=0x84a1050, 
    _mouse=0xbfefe3cc) at /tmp/buildd/kde4libs-4.0.4/khtml/khtmlview.cpp:1309
#14 0xb6a446a1 in QWidget::event () from /usr/lib/libQtGui.so.4
#15 0xb6d79063 in QFrame::event () from /usr/lib/libQtGui.so.4
#16 0xb3c5394f in KHTMLView::widgetEvent (this=0x84a1050, e=0xbfefe3cc)
    at /tmp/buildd/kde4libs-4.0.4/khtml/khtmlview.cpp:2290
#17 0xb3c56efd in KHTMLView::eventFilter (this=0x84a1050, o=0x84a2b10, 
    e=0xbfefe3cc) at /tmp/buildd/kde4libs-4.0.4/khtml/khtmlview.cpp:2154
#18 0xb7be8a21 in QCoreApplicationPrivate::sendThroughObjectEventFilters ()
   from /usr/lib/libQtCore.so.4
#19 0xb69ecbe3 in QApplicationPrivate::notify_helper ()
   from /usr/lib/libQtGui.so.4
#20 0xb69f1cd5 in QApplication::notify () from /usr/lib/libQtGui.so.4
#21 0xb7792e23 in KApplication::notify (this=0xbfefed6c, receiver=0x84a2b10, 
    event=0xbfefe3cc)
    at /tmp/buildd/kde4libs-4.0.4/kdeui/kernel/kapplication.cpp:314
#22 0xb7be86a9 in QCoreApplication::notifyInternal ()
   from /usr/lib/libQtCore.so.4
#23 0xb69eee21 in QApplicationPrivate::sendMouseEvent ()
   from /usr/lib/libQtGui.so.4
#24 0xb6a58ccd in ?? () from /usr/lib/libQtGui.so.4
#25 0xb6a576b1 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#26 0xb6a803ba in ?? () from /usr/lib/libQtGui.so.4
#27 0xb66fdbf8 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#28 0xb6700e5e in ?? () from /usr/lib/libglib-2.0.so.0
#29 0x08060898 in ?? ()
#30 0x00000000 in ?? ()
#0  0xb7f63410 in __kernel_vsyscall ()


This was originally reported in the Kubuntu bug tracker at https://bugs.launchpad.net/ubuntu/+source/kdebase-kde4/+bug/229438
Comment 1 Yuriy Kozlov 2008-05-29 22:23:08 UTC
Created attachment 25000 [details]
backtrace

Attaching the backtrace (already pasted in description).
Comment 2 Maksim Orlovich 2008-05-30 19:08:32 UTC
SVN commit 814555 by orlovich:

Fix crash on weather.com earthquake map (and also the hosted SunSpider --- but cool people 
use standalone anyway)

BUG:162837


 M  +1 -1      render_replaced.cpp  
 M  +2 -1      render_replaced.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=814555
Comment 3 Maksim Orlovich 2008-05-30 19:35:19 UTC
SVN commit 814564 by orlovich:

Backport fix for #162837
CCBUG:162837


 M  +1 -1      render_replaced.cpp  
 M  +2 -1      render_replaced.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=814564