Fix crash on weather.com earthquake map (and also the hosted SunSpider --- but cool people use standalone anyway)

BUG:162837

svn path=/trunk/KDE/kdelibs/; revision=814555